--- a/index.html
+++ b/index.html
@@ -10,8 +10,54 @@
 
 <body>
 
+
+
+
+  <div class="box">
+        <h1>Guess the lie...</h1>
+
+
+  <button class = "true">
+           <p>I traveled in Europe</p>
+  </button>
+
+ <button class= "true">
+          <p>I love to play chess</p>
+  </button>
+
+   <button class= "wrong">
+          <p>I am good in Figure Skating</p>
+    </button>
+
+    <p id="next">
+        Next
+      </p>
+ </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src='main.js'></script>
+    <script src='main.js'>
+
+
+
+
+
+
+
+</script>
 </body>
 
 </html>
